Added update_kubeseal_cli tag

--- a/tasks/06_install_sealed_secrets.yml
+++ b/tasks/06_install_sealed_secrets.yml
@@ -80,3 +80,4 @@
     - install.sealed_secrets.enabled|default(false)|bool == true
   tags:
     - install_sealed_secrets
+    - update_kubeseal_cli
