--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -210,6 +210,7 @@ install:
     install_version: "{{traefik_install_version|default('v10.22.0')}}"
 
     namespace: "traefik"                      # Add resources to this namespace
+    argocd_project: "ingress"                 # ArgoCD Project to associate this with
 
     # Traefik Dashboard
     dashboard:
