Converted issue templates to new format

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -3,7 +3,8 @@ description: Create a report to help us improve
 title: "Issue Title HERE"
 labels: [bug]
 assignees:
-  - 
+  - reefland
+
 body:
   - type: markdown
     attributes:
