--- a/vars/secrets/main.yml.example
+++ b/vars/secrets/main.yml.example
@@ -6,6 +6,9 @@ ARGOCD_REPO_USERNAME_SECRET: "oauth"
 # Github Personal Access Token
 ARGOCD_REPO_PASSWORD_SECRET: "xyz123"
 
+# ArgoCD Slack Token for Notifications 
+ARGOCD_NOTIFICATIONS_SLACK_TOKEN_SECRET: "xoxb-....."
+
 ###[ Sealed Secrets Private Key ]##################################################################
 # By default Sealed Secrets will generate its own private key upon installation.  These can not
 # be shared across clusters or used to restore your cluster and make existing sealed secrets 
